# chinese-sentiment-analysis-thesis

./: .gitignore  README.md  evaluation_results.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
legacy/: XGBoost 模型训练.py  text_preprocessor.py  tokenizer_util.py  数据划分3.py
scripts/: evaluate.py  train.py
src/sentiment_system/: __init__.py  api.py  classifier.py  preprocessing.py  tokenizer.py
tests/: test_classifier.py  test_preprocessing.py
