[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bjtu-sentiment-system-restored"
version = "1.0.0"
description = "社交媒体评论XGBoost情感分析毕设恢复版"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
